--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "@liveblocks/client": "^2.0.3",
     "@liveblocks/react": "^2.0.3",
     "@liveblocks/yjs": "^2.0.3",
+    "@mdx-js/react": "^3.1.0",
     "@monaco-editor/react": "^4.6.0",
+    "@supabase/supabase-js": "^2.46.1",
     "codemirror": "^6.0.1",
     "monaco-editor": "^0.49.0",
     "next": "^14.2.4",
@@ -16,6 +18,8 @@
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
+    "string-similarity": "^4.0.4",
+    "styled-components": "^6.1.13",
     "y-codemirror.next": "^0.3.4",
     "y-monaco": "^0.1.5",
     "y-protocols": "^1.0.6",
