--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@liveblocks/client": "^2.0.3",
     "@liveblocks/react": "^2.0.3",
     "@liveblocks/yjs": "^2.0.3",
+    "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@monaco-editor/react": "^4.6.0",
     "@supabase/supabase-js": "^2.46.1",
     "codemirror": "^6.0.1",
+    "mdx-embed": "^1.1.2",
     "monaco-editor": "^0.49.0",
     "next": "^14.2.4",
     "nextra": "^2.13.4",
