--- a/package.json
+++ b/package.json
@@ -30,13 +30,18 @@
     "yjs": "^13.6.17"
   },
   "scripts": {
-    "dev": "next",
+   "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next start"
+    "export": "next build && touch out/.nojekyll",
+    "lint": "next lint --max-warnings=0",
+    "type-check": "tsc",
+    "deploy": "gh-pages -d out -t true",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/node": "20.14.4",
+    "gh-pages": "^6.2.0",
     "tailwindcss": "^3.4.17",
     "typescript": "5.4.5"
   }
