--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@remark-embedder/core": "^3.0.3",
     "@supabase/supabase-js": "^2.46.1",
+    "@vercel/analytics": "^1.5.0",
     "codemirror": "^6.0.1",
     "monaco-editor": "^0.49.0",
     "next": "^14.2.4",
