--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@remark-embedder/core": "^3.0.3",
     "@supabase/supabase-js": "^2.46.1",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "codemirror": "^6.0.1",
     "monaco-editor": "^0.49.0",
     "next": "^15.3.4",
